# AoC

2024/: Cargo.toml
2024/common/: Cargo.toml
2024/common/src/: map.rs  point.rs
2024/problem_01_01/: Cargo.toml
2024/problem_01_01/src/: main.rs
2024/problem_01_02/: Cargo.toml
2024/problem_01_02/src/: main.rs
2024/problem_02_01/src/: main.rs
2024/problem_02_02/: Cargo.toml
2024/problem_02_02/src/: main.rs
2024/problem_03_01/: Cargo.toml
2024/problem_03_01/src/: main.rs
2024/problem_03_02/: Cargo.toml
2024/problem_03_02/src/: main.rs
2024/problem_04_01/: Cargo.toml
2024/problem_04_01/src/: main.rs
2024/problem_04_02/: Cargo.toml
2024/problem_04_02/src/: main.rs
2024/problem_05_01/: Cargo.toml
2024/problem_05_01/src/: main.rs
2024/problem_05_02/: Cargo.toml
2024/problem_05_02/src/: main.rs
2024/problem_07_01/: Cargo.toml
2024/problem_07_01/src/: main.rs
2024/problem_07_02/: Cargo.toml
2024/problem_07_02/src/: main.rs
2024/problem_08_01/: Cargo.toml
2024/problem_08_01/src/: main.rs
2024/problem_08_02/: Cargo.toml
2024/problem_08_02/src/: main.rs
2024/problem_09_01/: Cargo.toml  test.py
2024/problem_09_01/proptest-regressions/: main.txt
2024/problem_09_01/src/: main.rs
2024/problem_10_01/: Cargo.toml
2024/problem_10_01/src/: main.rs
2024/problem_10_02/: Cargo.toml
2024/problem_10_02/src/: main.rs
2024/problem_11_01/: Cargo.toml
2024/problem_11_02/: Cargo.toml
2024/problem_12_01/: Cargo.toml
2024/problem_12_02/: Cargo.toml
2024/problem_13_01/: Cargo.toml
2024/problem_13_02/: Cargo.toml
(+36 files in other folders)
